chore: reorganize docs with snippet references and diagrams (#59)
* updated docs
* fixes of formatting
